add: index.html main structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,43 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+
+  <nav class="sidebar">
+    <ul class="sidebar__items">
+      <li>Home</li>
+      <li>Browse</li>
+      <li>Radio</li>
+    </ul>
+    <span>YOUR LIBRARY</span>
+    <ul class="sidebar__library">
+      <li>Queen</li>
+      <li>Beatles</li>
+      <li>Black Sabbath</li>
+      <li>AC/DC</li>
+      <li>Daft Punk</li>
+    </ul>
+    <span>PLAYLIST</span>
+    <ul class="sidebar__playlist">
+      <li>Playlist1</li>
+    </ul>
+  </nav>
+  <main class="home">
+    <h1>HOME</h1>
+  </main>
+  <footer class="taskbar">
+    <div class="taskbar__track">
+      <img src="#" alt="track-cover">
+      <h4>Overture</h4>
+      <p>Daft Punk</p>
+      <i>♥</i>
+    </div>
+    <div class="taskbar__trackStatus">
+      Track status
+    </div>
+    <div class="taskbar__trackAudio">
+      Setting audio here
+    </div>
+  </footer>
   <script src="./js/main.js"></script>
 </body>
 </html>
