add: normalize.sass - edit: html structure of index.html

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
   </main>
   <footer class="taskbar">
     <div class="taskbar__track">
-      <img src="#" alt="track-cover">
-      <h4>Overture</h4>
-      <p>Daft Punk</p>
+      <img src="https://www.nonstop2k.com/midi-files/covers/7986.jpg" alt="track-cover">
+      <div class="info">
+        <strong>Overture</strong>
+        <p>Daft Punk</p>
+      </div>
       <i>♥</i>
     </div>
     <div class="taskbar__trackStatus">
