refact: home.js - add: normalize.sass

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Clone</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,800;0,900;1,300;1,400;1,600;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./fontawesome/css/all.min.css">
   <link rel='icon' type='image/png' href="./icon.png"/>
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -13,9 +14,14 @@
 
   <nav class="sidebar">
     <ul class="sidebar__items">
-      <li>Home</li>
-      <li>Browse</li>
-      <li>Radio</li>
+      <li>
+        <i class="fas fa-home"></i>
+        <span>Home</span>
+      </li>
+      <li>
+        <i class="fas fa-folder"></i>
+        <span>Browse</span>
+      </li>
     </ul>
     <span>YOUR LIBRARY</span>
     <ul class="sidebar__library">
