edit: sidebar.sass

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span>Browse</span>
       </li>
     </ul>
-    <span>YOUR LIBRARY</span>
+    <h5>YOUR LIBRARY</h5>
     <ul class="sidebar__library">
       <li>Queen</li>
       <li>Beatles</li>
@@ -31,7 +31,7 @@
       <li>AC/DC</li>
       <li>Daft Punk</li>
     </ul>
-    <span>PLAYLIST</span>
+    <h5>PLAYLIST</h5>
     <ul class="sidebar__playlist">
       <li>Playlist1</li>
     </ul>
