--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </div>
   </footer>
   <script src="./js/main.js" type="module"></script>
+  <script src="./js/sidebar.js" type="module"></script>  
   <script src="./js/home.js" type="module"></script>  
 </body>
 </html>
