edit: queen page added popular tracks and list of all albums

--- a/queen.html
+++ b/queen.html
@@ -61,10 +61,13 @@
           <button>...</button>
         </div>
         <ul class="selectSubPage">
-          <li data-noSelect="true">Overview</li>
+          <li data-noSelect="true">
+            <div class="overview"></div>
+            Overview
+          </li>
           <li data-noSelect="true">Fans also like</li>
           <li data-noSelect="true">About</li>
-          <li data-noSelect="true">Cocerts</li>
+          <li data-noSelect="true">Concerts</li>
         </ul>
       </div>
 
@@ -76,20 +79,9 @@
       <div class="albumList">
         <h3>Albums</h3>
         <hr>
-        <div class="albumList__piece">
-          <div class="albumList__piece--header">
-            <img src="https://upload.wikimedia.org/wikipedia/en/thumb/0/03/Queen_Queen.png/220px-Queen_Queen.png" alt="album-cover">
-            <div class="header__info">              
-              <p>2020</p>
-              <h2>Live Around The World (Deluxe)</h2>
-              <i>♥</i>
-              <i>...</i>
-            </div>
-          </div>
-          <ul class="albumList__piece--list"></ul>
-        </div>
+        <div class="albumList__piece"></div>
       </div>
-      
+
     </div>
   </main>
   <footer class="taskbar">
