add: audio folder - edit: queen.index player and queen.js light refactoring

--- a/queen.html
+++ b/queen.html
@@ -67,7 +67,7 @@
           </li>
           <li data-noSelect="true">Fans also like</li>
           <li data-noSelect="true">About</li>
-          <li data-noSelect="true">Concerts</li>
+          <li data-noSelect="true">Conscerts</li>
         </ul>
       </div>
 
@@ -92,7 +92,7 @@
         <p>Daft Punk</p>
       </div>
     </div>
-    <div class="taskbar__trackStatus">
+    <!-- <div class="taskbar__trackStatus">
       <div class="audioSetter">
         <i class="fas fa-step-backward"></i>
         <i class="fas fa-play"></i>
@@ -101,7 +101,12 @@
       <div class="audioProgress">
         <input type="range" id="volume" name="volume">
       </div>
-    </div>
+    </div> -->
+
+    <audio controls>
+      <source class="taskbar__trackStatus" type="audio/ogg">
+    </audio>
+
     <div class="taskbar__trackAudio">
       <i class="fas fa-volume-up"></i>
       <input type="range">
