add: video to queen.index page

--- a/queen.html
+++ b/queen.html
@@ -71,9 +71,19 @@
         </ul>
       </div>
 
-      <div class="mostPopular">
-        <h3>Popular</h3>
-        <ul class="mostPopular__list"></ul>
+      <div class="topNtop">
+        <div class="mostPopular">
+          <h3>Popular</h3>
+          <ul class="mostPopular__list"></ul>
+        </div>
+        <div class="videos">
+          <iframe
+            src="https://www.youtube.com/embed/-tJYN-eG1zk?controls=0&amp;start=10"
+            frameborder="1"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          >
+          </iframe>          
+        </div>
       </div>
 
       <div class="albumList">
