add: first implementation favourites - edit: loading track in footer

--- a/queen.html
+++ b/queen.html
@@ -77,10 +77,10 @@
           <ul class="mostPopular__list"></ul>
         </div>
         <div class="videos">
-          <iframe
-            src="https://www.youtube.com/embed/-tJYN-eG1zk?controls=0&amp;start=10"
-            frameborder="1"
+          <iframe src="https://www.youtube.com/embed/-tJYN-eG1zk?controls=0&amp;start=10"
+            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
           >
           </iframe>          
         </div>
@@ -96,10 +96,10 @@
   </main>
   <footer class="taskbar">
     <div class="taskbar__track">
-      <img src="https://www.nonstop2k.com/midi-files/covers/7986.jpg" alt="track-cover">
+      <img src="./default-cover.png" alt="track-cover">
       <div class="info">
-        <strong>Overture</strong>
-        <p>Daft Punk</p>
+        <strong> </strong>
+        <p></p>
       </div>
     </div>
     <!-- <div class="taskbar__trackStatus">
