edit: little restyle home carousel

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Beatles -->
     <div class="wrapperTracks">
       <div class="wrapperTracks__header">
-        <h2>Beatles</h2>
+        <h2 class="wrapperTracks--beatles">The Beatles </h2>
         <div class="dirBtn" id="beatles">
           <button class="dirBtn__right"> < </button>
           <button class="dirBtn__left"> > </button>
@@ -64,7 +64,7 @@
     <!-- AC/DC -->
     <div class="wrapperTracks">
       <div class="wrapperTracks__header">
-        <h2>AC/DC</h2>
+        <h2 class="wrapperTracks--ac-dc">AC⚡DC</h2>
         <div class="dirBtn" id="ac-dc">
           <button class="dirBtn__right"> < </button>
           <button class="dirBtn__left"> > </button>
@@ -76,7 +76,7 @@
     <!-- Queen -->
     <div class="wrapperTracks">
       <div class="wrapperTracks__header">
-        <h2>Queen</h2>
+        <h2 class="wrapperTracks--queen">Queen</h2>
         <div class="dirBtn" id="queen">
           <button class="dirBtn__right"> < </button>
           <button class="dirBtn__left"> > </button>
@@ -88,7 +88,7 @@
     <!-- Black Sabbath -->
     <div class="wrapperTracks">
       <div class="wrapperTracks__header">
-        <h2>Black Sabbath</h2>
+        <h2 class="wrapperTracks--black-sabbath">Black Sabbath </h2>
         <div class="dirBtn" id="black-sabbath">
           <button class="dirBtn__right"> < </button>
           <button class="dirBtn__left"> > </button>
