add: favourite tracks in local storage, actually only in queen.js

--- a/queen.html
+++ b/queen.html
@@ -44,9 +44,7 @@
       </a>
     </ul>
     <h5>PLAYLIST</h5>
-    <ul class="sidebar__playlist">
-      <li>Playlist1</li>
-    </ul>
+    <ul class="sidebar__playlist"></ul>
   </nav>
   <main class="home">
     <div class="artistSection">
