add: coldplay, bee-gees, the-beatles pages - add: audio folder - edit: queen.js to artistPaje.js

--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
         <li id="queen">Queen</li>
       </a>
       <a href="./cold-play.html">
-        <li id="beatles">Coldplay</li>
+        <li id="coldplay">Coldplay</li>
       </a>
       <a href="./bee-gees.html">
-        <li id="black-sabbath">Bee Gees</li>
+        <li id="bee-gees">Bee Gees</li>
       </a>
-      <a href="./pooh.html">
-        <li id="ac/dc">Pooh</li>
-      </a>
-      <a href="./pink-floyd">
-        <li id="daft-punk">Pink Floyd</li>
+      <a href="./the-beatles.html">
+        <li id="the-beatles">The Beatles</li>
       </a>
     </ul>
     <h5>PLAYLIST</h5>
@@ -137,6 +134,11 @@
     Nirvana: 111319
     Daft Punk: 111492
     Queen: 111238
+
+    Coldplay: 111239
+    Bee Gees: 111264
+    Pooh: 136205
+    Pink Folyd: 111259
  -->
 
 
