edit: fix pointer pages in the sidebar

--- a/bee-gees.html
+++ b/bee-gees.html
@@ -34,7 +34,7 @@
         <li id="coldplay">Coldplay</li>
       </a>
       <a href="./bee-gees.html">
-        <li id="bee-gees">Bee Gees</li>
+        <li id="bee-gees" class="selectedItemLibrary">Bee Gees</li>
       </a>
       <a href="./the-beatles.html">
         <li id="the-beatles">The Beatles</li>
