--- a/cold-play.html
+++ b/cold-play.html
@@ -31,7 +31,7 @@
         <li id="queen">Queen</li>
       </a>
       <a href="./cold-play.html">
-        <li id="coldplay">Coldplay</li>
+        <li id="coldplay" class="selectedItemLibrary">Coldplay</li>
       </a>
       <a href="./bee-gees.html">
         <li id="bee-gees">Bee Gees</li>
