--- a/queen.html
+++ b/queen.html
@@ -27,8 +27,8 @@
     </ul>
     <h5>YOUR LIBRARY</h5>
     <ul class="sidebar__library">
-      <a href="./queen.html">
-        <li id="queen">Queen</li>
+      <a href="./queen.html" class="">
+        <li id="queen" class="selectedItemLibrary">Queen</li>
       </a>
       <a href="./cold-play.html">
         <li id="coldplay">Coldplay</li>
