--- a/the-beatles.html
+++ b/the-beatles.html
@@ -37,7 +37,7 @@
         <li id="bee-gees">Bee Gees</li>
       </a>
       <a href="./the-beatles.html">
-        <li id="the-beatles">The Beatles</li>
+        <li id="the-beatles" class="selectedItemLibrary">The Beatles</li>
       </a>
     </ul>
     <h5>PLAYLIST</h5>
