--- a/queen.html
+++ b/queen.html
@@ -16,7 +16,7 @@
     <ul class="sidebar__items">
       <li>
         <i class="fas fa-home"></i>
-        <a href="#">
+        <a href="https://casiimir.github.io/spotify-clone/index.html">
           <span>Home</span>
         </a>
       </li>
